--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,72 @@
+@import url('https://fonts.googleapis.com/css2?family=Manrope:wght@200&display=swap');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@media only screen and (max-width: 640px) {
+  .preview-container {
+    flex-direction: column;
+  }
+}
+
+.image-border-l {
+  border: 0.3rem solid #d6f8d6;
+  box-shadow: 0.2rem 0.2rem #000000, 0.3rem 0.3rem #e4572e,
+    -0.2rem -0.2rem #000000, -0.3rem -0.3rem #0bbcd6;
+}
+
+.image-border-r {
+  border: 0.3rem solid #d6f8d6;
+  box-shadow: 0.2rem 0.2rem #000000, 0.3rem 0.3rem #e4572e,
+    -0.2rem -0.2rem #000000, -0.3rem -0.3rem #0bbcd6;
+}
+
+.header-border {
+  background: #000000;
+  border: 0.2rem solid #d6f8d6;
+  box-shadow: -0.3rem -0.3rem 0 -0.1rem #000000, -0.3rem -0.3rem #0bbcd6,
+    -0.6rem -0.6rem 0 -0.1rem #000000, -0.6rem -0.6rem #e4572e;
+}
+
+.header-border:hover {
+  box-shadow: 0 0 0 0 #000000, 0 0 0 0 #0bbcd6, 0 0 0 0 #000000, 0 0 0 0 #e4572e !important;
+  border: 0.2rem solid #d6f8d6;
+  background: linear-gradient(
+    315deg,
+    rgba(11, 188, 214, 1) 0%,
+    rgba(0, 0, 0, 1) 50%,
+    rgba(228, 87, 46, 1) 100%
+  ) !important;
+  transition-duration: 700ms;
+}
+
+.active {
+  border: 2px solid #1db9b9;
+  transform: scale(1.3);
+  transition: all 300ms;
+}
+
+.App {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-content: center;
+  align-items: center;
+}
+
+.slideshow {
+  position: relative;
+}
+
+.text-container {
+  border: 0.1rem solid #d6f8d6;
+  box-shadow: 0.3rem -0.3rem 0 -0.1rem #000000, 0.3rem -0.3rem #0bbcd6,
+    0.6rem -0.6rem 0 -0.1rem #000000, 0.6rem -0.6rem #e4572e;
+}
+
+.text-container:hover {
+  box-shadow: 0 0 0 0 #000000, 0 0 0 0 #0bbcd6, 0 0 0 0 #000000, 0 0 0 0 #e4572e !important;
+  border: 0.1rem solid #d6f8d6;
+  transition-duration: 700ms;
+}
